--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import './custom.css'
+
 
 :root {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
 }
+body {
+  margin: 0;
+  line-height: 1.5rem;
+}
 
+*{
+  margin: 0;
+}
 *, :after, :before {
   box-sizing: border-box;
   border: 0 solid #e5e7eb;
