--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -41,7 +41,7 @@
       @apply border border-black bg-white text-black
     }
     .btn {
-      @apply inline-block whitespace-nowrap rounded-lg px-7 py-[13px] text-[15px] font-semibold transition-colors duration-200
+      @apply inline-block whitespace-nowrap rounded-lg px-7 py-[13px] sm:py-[15px] text-[15px] font-semibold transition-colors duration-200
 
     }
     /* .custom.btn{
