home page completed

--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -4,7 +4,11 @@
 
 @layer components {
   .navbar-brand img {
-    @apply max-h-full w-130px max-w-full;
+    @apply max-h-full w-130px xl:w-[158px] max-w-full;
+  }
+
+  .navbar-wrapper {
+    @apply absolute left-0 top-full ml-auto flex h-0 w-full flex-1 flex-col-reverse overflow-hidden bg-white p-0 opacity-0 transition-opacity duration-300 ease-out
   }
 
   .media-element {
@@ -20,8 +24,8 @@
 
 @layer components {
   .custom-bg-color {
-      background-color: rgba(34, 34, 34, 0.9);
-    }
+    background-color: rgba(34, 34, 34, 0.9);
+  }
 
   .social-icons li a {
     @apply inline-block h-[45px] w-[45px] transform-none rounded-full custom-bg-color text-center text-base leading-[45px] transition-transform ease-out duration-300;
@@ -52,7 +56,11 @@
     @apply inline-block whitespace-nowrap rounded-lg px-7 py-[13px] sm:py-[15px] text-[15px] font-semibold transition-colors duration-200
   }
 
-  .btn-footer{
+  .btn-login {
+    @apply inline-block whitespace-nowrap rounded-lg px-[1.75rem] py-[13px] text-[15px] font-semibold transition-colors duration-200
+  }
+
+  .btn-footer {
     @apply inline-block whitespace-nowrap rounded-lg px-10 xs:py-[13px] sm:py-[17px] text-[15px] font-semibold transition-colors duration-200
   }
 
@@ -78,5 +86,29 @@
     } */
   .nav-dropdown-link {
     @apply block w-full p-1 px-4 text-[15px] font-normal transition-colors transition-opacity transition-shadow transition-transform duration-150 ease-in-out py-2
+  }
+}
+
+@layer utilities {
+
+  .header .nav-dropdown-link,
+  .header .nav-link,
+  .header a:not(.btn) {
+    font-size: 15px;
+  }
+
+  @media (min-width: 1320px) {
+
+    .header .nav-dropdown-link,
+    .header .nav-link,
+    .header a:not(.btn) {
+      font-size: 18px;
+    }
+  }
+
+  @media (min-width:1024px) {
+    .navbar-wrapper {
+      @apply visible static h-auto w-auto flex-row overflow-visible bg-transparent p-0 opacity-100 drop-shadow-none;
+    }
   }
 }
